feat:general protocol support